--- a/2기/[케블리] #58. 신뢰,선의 그리고 평판 블록체인 프로덕트와 블록체인 업계의 Key Successful Factor.md
+++ b/2기/[케블리] #58. 신뢰,선의 그리고 평판 블록체인 프로덕트와 블록체인 업계의 Key Successful Factor.md
@@ -37,7 +37,7 @@ DPOS의 BP(Block Producer)들이 합의된 것들 이상의 권력을 지니게 
 <h3>1. ICO</h3>
 
 
- 엄청나게 커진 시장규모, 자금조달 규모, 다양해진 적요다르게 scam으로 판명나거나 실패로 분류된 ICO가 정말 많이 존재합니다. 상황이 이렇다보니 더욱이 신뢰와 믿음이 중요한 이 시장에서, ICO의 프로젝트의 성공가능성(단지 자금조달성공의 의미나 아닌), 지속가능성을 판단할 때 팀원들의 background와 그 팀원들의 프로젝트에 대한 Good will을 중요한 요소로서 체크하는 것이 현실입니다. Scam일 것이냐 아닐 것이냐는 한끝차이인지라 끊임없이 신뢰를 쌓고 적극적으로 투자자 및 커뮤니티에 역량과 의지를 꾸준히 커뮤니케이션해내는 것이 정말 중요한 부분입니다. 이후에 실제로 프로덕트 및 서비스를 개발, 실행해내는 과정도 투명하고 적극적으로 나타내주어야 성공적인 ICO로 평가받을 수 있을 것입니다.
+ 엄청나게 커진 시장규모, 자금조달 규모, 다양해진 적용분야 등의 양상을 보이는 한편 scam으로 판명나거나 실패로 분류된 ICO가 정말 많이 존재합니다. 상황이 이렇다보니 더욱이 신뢰와 믿음이 중요한 이 시장에서, ICO의 프로젝트의 성공가능성(단지 자금조달성공의 의미나 아닌), 지속가능성을 판단할 때 팀원들의 background와 그 팀원들의 프로젝트에 대한 Good will을 중요한 요소로서 체크하는 것이 현실입니다. Scam일 것이냐 아닐 것이냐는 한끝차이인지라 끊임없이 신뢰를 쌓고 적극적으로 투자자 및 커뮤니티에 역량과 의지를 꾸준히 커뮤니케이션해내는 것이 정말 중요한 부분입니다. 이후에 실제로 프로덕트 및 서비스를 개발, 실행해내는 과정도 투명하고 적극적으로 나타내주어야 성공적인 ICO로 평가받을 수 있을 것입니다.
 
 ![](https://cdn.steemitimages.com/DQmeZnm5xc7j5AjsZuJTqYya4SjRYtzgRoLP5pzoEhijEvb/image.png)
 
@@ -53,7 +53,7 @@ DPOS의 BP(Block Producer)들이 합의된 것들 이상의 권력을 지니게 
 <h3>2. 꾸준한 연구/진리탐구 </h3>
 
  이 케블리 활동 목적도 그렇고, 블록체인/크립토 업계에서는 기술과 비즈니스 등에 대한 깊이 있는 진리 탐구와 연구가 정말 다양한 사람들로부터 이루어지고 있습니다. 주요 대학의 학회들부터 시작해서 블록체인 업계 종사자들, 타 업계 전문가들 등 이 거대하고 새로운 메커니즘을 따라잡고 이 종잡을 수 없는 시장의 진가를 알아내기 위해 다양한 연구들이 계속되고 있습니다. 개인적으로 저는 이런 연구와 진리탐구로부터 시작된 비즈니스가 추후에는 더 힘을 발휘할 수 있을 것이라고 생각합니다. 이러한 '진짜'를 위해 고군분투하는 과정이 신뢰와 선의를 보장할 수 있는 것이고 더 나아가 그 기반으로 이 시장에서 좋은 평판으로 이어질 수 있습니다. 
-(그 때문에 케블리 활동이 업계에 긍정적인 영향을 끼칠 수 있도록, 정보의 불균형을 어느정도 해소하고 제도권과 다양한 시각들이 모여 더 큰 관점으로 블록체인 산업을 바라볼 수 있는 장이 될 수 있도록 키워나가고 싶다는 생각을 가지고 있습니다.) 한편으로는 이 연구/탐구로 시작된 Good will이 어느순간 변질될 수도 있겠다는 생각이 들때가 있는데, <b>이 업계에 정말 Good will이 끝까지 지켜질 수 있는 무언가가 존재하지 않는다면 그 업계 자체는 세상을 좋은 방향으로 발전시키지 못할 것이고 붕괴할 가능성이 크다고 개인적으로 생각하는 바입니다. </b>
+(그 때문에 케블리 활동이 업계에 긍정적인 영향을 끼칠 수 있도록, 정보의 불균형을 어느정도 해소하고 제도권과 다양한 시각들이 모여 더 큰 관점으로 블록체인 산업을 바라볼 수 있는 장이 될 수 있도록 키워나가고 싶다는 생각을 가지고 있습니다.) 한편으로는 이 연구/탐구로 시작된 Good will이 어느순간 변질될 수도 있겠다는 생각이 들때가 있는데, 이 업계에 정말 Good will이 끝까지 지켜질 수 있는 무언가가 존재하지 않는다면 그 업계 자체는 세상을 설득시켜 좋은 방향으로 발전시키지 못할 것이고 어느새 서서히 붕괴될 가능성이 크다고 개인적으로 생각하는 바입니다. 
 
 
 
@@ -61,8 +61,7 @@ DPOS의 BP(Block Producer)들이 합의된 것들 이상의 권력을 지니게 
 
 <h3>3. 토큰 설계 시 평판시스템</h3>
 
-
- 사람이 개입하지 않고 오로지 프로토콜로만 돌아갈 수 있는 탈중앙화 시스템이 가능할까?라는 질문은 이 업계에서 일하면서 계속 궁금했던 부분이었습니다. 제가 미처 생각지 못한 인사이트를 얻고 싶어 개발자분들께 여쭤보기도 하고 여러 관련 종사자분들께 여쭤보기도 했는데, 여전히 의견이 갈리고 물음표로 남겨져 있던 부분이었습니다. 어찌 되었든 블록체인이 표방하는 탈중앙화 시스템이 잘 돌아가기 위해서는 ‘신뢰성 있는 메커니즘’이 중요합니다.  그 메커니즘을 만들어내기 위해 토큰이라는 인센티브를 주고 바람직한 행동을 강화해나가는 것이 토큰 설계의 핵심이라고 할 수 있죠. 블록체인 프로젝트들을 살펴보면 일반적으로 그 토큰 매커니즘에 거의 대부분 ‘평판시스템’이 깔려있습니다. 탈중앙화된 네트워크가 잘 돌아가기 위해서는 올바른 행동을 유도해야하고, 그러기 위해서는 해당 프로젝트의 생태계를 긍정적인 방향으로 action을 취하는 좋은 평판을 가진 이들에게 더 많은 보상을 주어 선순환을 일으키는 것이 대부분의 프로젝트 토큰 설계에 포함되어 있습니다. 
+블록체인 프로토콜로 온전히 돌아갈 수 있는 탈중앙화 시스템이 정말 가능한 것일까?라는 질문은 이 업계에서 일하면서 계속 궁금했던 부분이었습니다. 제가 미처 생각지 못한 인사이트를 얻고 싶어 개발자분들께 여쭤보기도 하고 여러 관련 종사자분들께 여쭤보기도 했는데, 여전히 의견이 갈리고 물음표로 남겨져 있던 부분이었습니다. 어찌 되었든 블록체인이 표방하는 탈중앙화 시스템이 잘 돌아가기 위해서는 ‘신뢰성 있는 메커니즘’이 중요합니다.  그 메커니즘을 만들어내기 위해 토큰이라는 인센티브를 주고 바람직한 행동을 강화해나가는 것이 토큰 설계의 핵심이라고 할 수 있죠. 블록체인 프로젝트들을 살펴보면 일반적으로 그 토큰 매커니즘에 거의 대부분 ‘평판시스템’이 깔려있습니다. 탈중앙화된 네트워크가 잘 돌아가기 위해서는 올바른 행동을 유도해야하고, 그러기 위해서는 해당 프로젝트의 생태계를 긍정적인 방향으로 action을 취하는 좋은 평판을 가진 이들에게 더 많은 보상을 주어 선순환을 일으키는 것이 대부분의 프로젝트 토큰 설계에 포함되어 있습니다. 
  
 간단하게 BeeToken과 Augur 에서의 평판시스템을 살펴보겠습니다.
  
@@ -83,7 +82,7 @@ DPOS의 BP(Block Producer)들이 합의된 것들 이상의 권력을 지니게 
 -------------------------------------------------
  
 
-위의 몇 가지의 이야기들의 결이 조금씩은 다르지만, 결국 이 모든 것이 공통적으로 도출해내는 인사이트는 ‘신뢰(Trustworthy)’ ‘선의(Good will)’, 그리고 그것들로부터 구현되는 ‘평판(Reputation)’이 개별적인 프로젝트 메커니즘이 잘 돌아가기 위해서도 그리고 이 업계 내에서 경쟁력을 가지기 위해서도 특히나 필수적인 요소라는 것입니다. 초기 산업으로서 안정적인 정착을 위해서는 블록체인 업계를 이루는 최소한의 주요 구성원들이 저러한 요소들에 특히 유념하며 비즈니스나 학술적인 연구를 이어가는 것이 정말 중요한 것 같다고 생각됩니다. 저부터도 더욱 책임감을 가지고 블록체인 생태계, 블록체인 업계에서 최대한 Good will을 장착하고 Trustworthy한 관계를 맺어나가며 좋은 Reputation을 쌓아가도록 노력해야겠습니다. 
+위의 몇 가지의 이야기들의 결이 조금씩은 다르지만, 결국 이 모든 것이 공통적으로 도출해내는 인사이트는 ‘신뢰(Trustworthy)’ ‘선의(Good will)’, 그리고 그것들로부터 구현되는 ‘평판(Reputation)’이 개별적인 프로젝트 메커니즘이 잘 돌아가기 위해서도 그리고 이 업계 내에서 경쟁력을 가지기 위해서도 특히나 필수적인 요소라는 것입니다. <b>좋은게 좋은것이기 때문에 이런 키워드를 뽑은 것이 아닌,  실제 이 업계의 비즈니스 세계에서 살아남기 위해서 꼭 필요한 요소들이라고 생각됩니다.(즉, 이상적일 수 있지만 블록체인 세상이 궁극적으로 표방하고 바라는 모양새는 결국 그런 요소들이 갖춰진 한차원 선진적인 구조인 것 같습니다.) 초기 산업으로서 안정적인 정착을 위해서는 블록체인 업계를 이루는 최소한의 주요 구성원들이 저러한 요소들에 특히 유념하며 비즈니스나 학술적인 연구를 이어가는 것이 정말 중요할 것 같습니다.</b> 저부터도 더욱 책임감을 가지고 블록체인 생태계, 블록체인 업계에서 최대한 Good will을 장착하고 Trustworthy한 관계를 맺어나가며 좋은 Reputation을 쌓아가도록 노력해야겠습니다. 
 혹시 이러한 비슷한 관점을 가지고 어떤 방법으로 실천해나가고 있는지 공유해주실 분들은 자유롭게 댓글남겨주시면 감사하겠습니다 :) 
 
 
@@ -91,8 +90,8 @@ DPOS의 BP(Block Producer)들이 합의된 것들 이상의 권력을 지니게 
 <b>PS.</b>
 
 "OO가 다단계래요. " "OO는 스캠이라는 얘기가 있어요."
-정말 업계 내에서 아름아름 다양한 이야기들을 들어왔습니다. 하지만 저는 아리송한 부분에 있어서 ‘섣부른 판단은 금물'이라는 생각이 늘 들었습니다. 한번 잘못 쌓인 Reputation이 매우 큰 발목을 잡을 수 있지만, 그 Reputation을 뒤집을 수 있는 지속적인 Value-add를 업계에 제공하고 적극적으로 지속가능한 비즈니스를 만들어내기 위해 노력한다면 또 어떤 기회에 어떻게 상황이 바뀔지 모르는 판이라고 생각하기 때문입니다.
-그 예로 EOS는 한때 스캠이 아니냐고 의심받았던 적이 있었죠. 하지만 지금은 끝까지 결국 올바른 방향으로 가기 위한 다양한 장치들과 노력들 덕분에 지금까지 충분히 각광받고 순항하고 있습니다. (물론 탈중앙화가 맞냐는 관점에서는 많은 논란이 있지만요.)  저는 결국 그런 ‘방향성'과 '의도'가 중요하다고 생각합니다.
+정말 업계 내에서 알음알음 다양한 이야기들을 들어왔습니다. 하지만 저는 아리송한 부분에 있어서 ‘섣부른 판단은 금물'이라는 생각이 늘 들었습니다. 한번 잘못 쌓인 Reputation이 매우 큰 발목을 잡을 수 있지만, 그 Reputation을 뒤집을 수 있는 지속적인 Value-add를 업계에 제공하고 적극적으로 지속가능한 비즈니스를 만들어내기 위해 노력한다면 또 어떤 기회에 어떻게 상황이 바뀔지 모르는 판이라고 생각하기 때문입니다.
+그 예로 EOS는 한때 스캠이 아니냐고 의심받았던 적이 있었죠. 하지만 지금은 끝까지 결국 올바른 방향으로 가기 위한 다양한 장치들과 노력들 덕분에 지금까지 충분히 각광받고 순항하고 있습니다. (물론 탈중앙화가 맞냐는 관점에서는 많은 논란이 있지만요.)  실제 결과도 결과이지만 결국 그런 꾸준한 ‘방향성'과 '의도'가 중요하다고 생각합니다.
 
  
 
